@@ -1,6 +1,7 @@
 
 Libraries 8.x-3.x, xxxx-xx-xx
 -----------------------------
+#2471501 by LKS90: Replace all occurrences of String with the SafeMarkup equivalent
 by tstoeckler: Fix drush libraries-list and drush cache-clear libraries
 #2427801 by Anushka-mp, tstoeckler: Replace module_invoke() call.
 by tstoeckler: Fix tests.
